fixed grid issues, now everything alignes to the grid, except the menu and views.

--- a/style/style.css
+++ b/style/style.css
@@ -111,6 +111,7 @@
 }
 
 .bordercontent {
+	margin-top: 30px;
 	padding-left: 30px;
  	border-left-style: solid;
 	border-left-width: 10px;
@@ -119,7 +120,7 @@
 }
 
 .bordermenu {
-	padding-top: 25px;
+	padding-top: 38px;
 	padding-left: 5px;
 	border-left: solid 1px #C6DACB;
 	
@@ -139,15 +140,17 @@
 	}
 	
 .breadcrumb {
-	padding-top: 25px;
+	font-size:12px;
+	margin-top: 12px;
+	margin-bottom: 1em;
+	line-height: 18px;
 	}
 
 .block {
  	border-width: 2px 8px 2px 2px ;
  	border-style: solid;
  	border-color: #C6DACB;
- 	background-color: #EDFFCB;
- 	padding: 6px 6px 6px 12px;
+ 	padding: 0.5em 0.5em 0.5em 0.75em;
  	
 }
 
@@ -171,13 +174,32 @@
 	border-top: solid 2px #C6DACB;
 	border-bottom: solid 1px #C6DACB;
 	padding-bottom: 5px;
-	position:absolute;
-	bottom: 10px;
+	position:relative;
 	}
-	
+
+.feed-item {padding-top: 15px;}
+#aggregator .feed-item-title {font-size: 18px;
+							  font-style: bold;
+							  margin-bottom: 18px; 	}
+#aggregator .feed-item-meta {font-style: italic;
+				padding-top: 3px;
+				margin-bottom: 18px;
+				}
+.feed-item-body {font-size: 12px;
+				margin-top: 3px;
+				line-height: 18px;}
+				
+.feed-item-body p{margin-bottom: 18px;}
+
+.feed-source {margin-bottom: 18px;}
+
 #secondary-links {
 	text-align: right;
 	}
 	
 .clear { clear:both;}
+
+.bordercontent h2{}
+
+body {line-height: 18px;}
 
